objects/vlocity_ins__GroupCensusMember__c.object
<CustomObject>
    <description>Represents specific personal information about a member (e.g. employee) or a dependent that is used by the insurance company to estimate the health care costs for the group. Master-detail child object of Group Census.</description>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CensusId__c</fullName>
        <label>Census</label>
        <referenceTo>vlocity_ins__GroupCensus__c</referenceTo>
        <relationshipLabel>Census Members</relationshipLabel>
        <relationshipName>Census_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClassCodes__c</fullName>
        <label>Class Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Census Members</relationshipLabel>
        <relationshipName>Census_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FTE__c</fullName>
        <label>FTE</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FirstName__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__GroupClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Class</label>
        <referenceTo>vlocity_ins__GroupClass__c</referenceTo>
        <relationshipLabel>Census Members</relationshipLabel>
        <relationshipName>CensusMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HasSpouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spouse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HireDate__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsFamily__c</fullName>
        <formula>IF(vlocity_ins__HasSpouse__c &amp;&amp; vlocity_ins__NumberOfDependents__c &gt;0, true, IF(!vlocity_ins__HasSpouse__c &amp;&amp; vlocity_ins__NumberOfDependents__c &gt;1, true, false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if member does not enroll in any plan.</description>
        <label>Opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPortalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPrimaryMember__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsSpouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Spouse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastName__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MemberIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>Member Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MemberType__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Cobra</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfDependents__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No. Dependents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OptOutTypes__c</fullName>
        <label>Opt-out Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Medical Savings Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Census Members</relationshipLabel>
        <relationshipName>Census_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryMemberIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>Primary Member Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelatedCensusMemberId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Census Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.vlocity_ins__CensusId__c</field>
                <operation>equals</operation>
                <valueField>vlocity_ins__GroupCensusMember__c.vlocity_ins__CensusId__c</valueField>
            </filterItems>
            <filterItems>
                <field>vlocity_ins__GroupCensusMember__c.vlocity_ins__IsPrimaryMember__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__GroupCensusMember__c</referenceTo>
        <relationshipLabel>Census Members</relationshipLabel>
        <relationshipName>CensusMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SocialSecurityNumber__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecProduct2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Census Members</relationshipLabel>
        <relationshipName>GroupCensusMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalDependents__c</fullName>
        <formula>If(vlocity_ins__HasSpouse__c,  vlocity_ins__NumberOfDependents__c+1,  vlocity_ins__NumberOfDependents__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Dependents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Census Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Census Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__FTEValidation</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__FTE__c &gt;1 || vlocity_ins__FTE__c&lt;0</errorConditionFormula>
        <errorDisplayField>vlocity_ins__FTE__c</errorDisplayField>
        <errorMessage>FTE value is between 0 and 1.</errorMessage>
    </validationRules>
</CustomObject>